# Taxi-Travel-Duration

./: .gitignore  LICENSE  README.md  mlflow.db  pyproject.toml
01-EDA/: EDA.ipynb
01-intro/: EDA and Model Selection.ipynb
02-training/: README.md  duration-prediction aws.ipynb  duration-prediction-aws.ipynb  duration-prediction.ipynb  main.py  mlflow.db  pyproject.toml
02-training/mlruns/1/171bbc13c8f84d91860852a044d874d0/artifacts/: estimator.html
02-training/mlruns/1/2018199ae7314b1ca434fe6d06da318d/artifacts/: estimator.html
02-training/mlruns/1/463b8fbdbe5540458a90087bf7cf7cf9/artifacts/: estimator.html
03-deployment/: README.md  duration-prediction.ipynb  duration-prediction.py  main.py  mlflow.db  prefect.yaml  pyproject.toml  run_id.txt
03-deployment/mlartifacts/1/cc731ef098a341859f24a6a1ca20bc8b/artifacts/preprocessor/: preprocessor.b
03-deployment/mlartifacts/1/models/m-3504a028c6ab44c29d8194273b645faf/artifacts/: model.xgb
03-deployment/mlartifacts/1/models/m-3df3eaf848d1462eb0dac40022ff4582/artifacts/: MLmodel
03-deployment/mlartifacts/1/models/m-8878bba8326a4a6c847c5fba5e7f9332/artifacts/: MLmodel  conda.yaml  model.xgb
03-deployment/mlartifacts/1/models/m-fc9266ab6619436aa1c75da75f43fc7c/artifacts/: MLmodel  model.xgb
03-pipeline/: README.md  duration-prediction.py  mlflow.db  pyproject.toml  run_id.txt
04-deployment/: main.py  predict.py  preprocessor.b  pyproject.toml  test.py
04-web-service-deployment/: Dockerfile  README.md  predict.py
04-web-service-deployment-pklhandoff/: client.py
04b-web-service-deployment-modelregistry/: mlflow.db  training.ipynb
04b-web-service-deployment-modelregistry/mlruns/1/0bfd6e5348f94015b5e224afd282c2d3/artifacts/: estimator.html
04c-streaming-deployment/: Dockerfile
04d-batch-deployment/: main.py  score.ipynb
05-web-service-deployment-modelregistry/: pyproject.toml  random-forest.ipynb  server.py
05-web-service-deployment-modelregistry/mlruns/1/439149d922d844fc8c594ec55d60bd74/artifacts/: estimator.html  metric_info.json
06-batch-deployment/: score.ipynb
EDA and Model Selection/: EDA and Model Selection.ipynb
mlruns/0/: meta.yaml
sql_lite:/02-training/mlflow.db/0/: meta.yaml
(+39 files in other folders)
