[project]
name = "03-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "hyperopt>=0.2.7",
    "jupyter>=1.1.1",
    "mlflow>=3.1.4",
    "pandas>=2.3.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=2.1.4",
]
