[project]
name = "03-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperopt>=0.2.7",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "mlflow>=3.3.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
]

[tool.uv.workspace]
members = [
    "03-deployment-env",
]
