[project]
name = "04-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.1",
    "typing>=3.10.0.0",
    "uvicorn>=0.35.0",
    "requests>=2.32.5"
]
